backend/compiler/YAPLGrammarParser.py
# Generated from YAPLGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLGrammarParser ( Parser ):

    grammarFileName = "YAPLGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'inherits'", "'('", "')'", 
                     "'{'", "'}'", "':'", "';'", "'<-'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'self'", "'if'", "'then'", "'else'", 
                     "'<'", "'>'", "'='", "'-'", "'+'", "'*'", "'/'", "'new'", 
                     "','", "'in'", "'.'", "'let'", "'out'", "'Object'", 
                     "'true'", "'false'", "'_'", "'fi'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'SIZES'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "INHERITS", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "COLON", "SEMICOLON", "ASSIGN", 
                      "INT", "BOOL", "STRING", "SELF", "IF", "THEN", "ELSE", 
                      "LESS_THAN", "GREAT_THAN", "EQUALS", "MINUS", "PLUS", 
                      "MULT", "DIV", "NEW", "COMMA", "IN", "DOT", "LET", 
                      "OUT", "OBJECT", "TRUE", "FALSE", "UNDERSCORE", "FI", 
                      "IDENTIFIER", "INT_LITERAL", "STRING_LITERAL", "SIZES", 
                      "WS", "COMMENT", "LINE_COMMENT", "ERROR" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_className = 2
    RULE_classNameParent = 3
    RULE_methodName = 4
    RULE_type = 5
    RULE_variable = 6
    RULE_parameterCall = 7
    RULE_primaryExpression = 8
    RULE_boolDeclaration = 9
    RULE_expression = 10
    RULE_arithmeticExpression = 11
    RULE_boolExpression = 12
    RULE_assignExpression = 13
    RULE_uniqueMethod = 14
    RULE_declaration = 15
    RULE_newVarDeclaration = 16
    RULE_varDeclaration = 17
    RULE_letDeclaration = 18
    RULE_methodCall = 19
    RULE_statement = 20
    RULE_assignStatement = 21
    RULE_ifStatement = 22
    RULE_statementList = 23
    RULE_letExpression = 24
    RULE_defineStatements = 25
    RULE_formalParameter = 26
    RULE_parameterList = 27
    RULE_methodDeclaration = 28
    RULE_feature = 29

    ruleNames =  [ "program", "classDeclaration", "className", "classNameParent", 
                   "methodName", "type", "variable", "parameterCall", "primaryExpression", 
                   "boolDeclaration", "expression", "arithmeticExpression", 
                   "boolExpression", "assignExpression", "uniqueMethod", 
                   "declaration", "newVarDeclaration", "varDeclaration", 
                   "letDeclaration", "methodCall", "statement", "assignStatement", 
                   "ifStatement", "statementList", "letExpression", "defineStatements", 
                   "formalParameter", "parameterList", "methodDeclaration", 
                   "feature" ]

    EOF = Token.EOF
    CLASS=1
    INHERITS=2
    LPAREN=3
    RPAREN=4
    LBRACE=5
    RBRACE=6
    COLON=7
    SEMICOLON=8
    ASSIGN=9
    INT=10
    BOOL=11
    STRING=12
    SELF=13
    IF=14
    THEN=15
    ELSE=16
    LESS_THAN=17
    GREAT_THAN=18
    EQUALS=19
    MINUS=20
    PLUS=21
    MULT=22
    DIV=23
    NEW=24
    COMMA=25
    IN=26
    DOT=27
    LET=28
    OUT=29
    OBJECT=30
    TRUE=31
    FALSE=32
    UNDERSCORE=33
    FI=34
    IDENTIFIER=35
    INT_LITERAL=36
    STRING_LITERAL=37
    SIZES=38
    WS=39
    COMMENT=40
    LINE_COMMENT=41
    ERROR=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLGrammarParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(YAPLGrammarParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YAPLGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.classDeclaration()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLGrammarParser.CLASS, 0)

        def className(self):
            return self.getTypedRuleContext(YAPLGrammarParser.ClassNameContext,0)


        def LBRACE(self):
            return self.getToken(YAPLGrammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLGrammarParser.RBRACE, 0)

        def SEMICOLON(self):
            return self.getToken(YAPLGrammarParser.SEMICOLON, 0)

        def INHERITS(self):
            return self.getToken(YAPLGrammarParser.INHERITS, 0)

        def classNameParent(self):
            return self.getTypedRuleContext(YAPLGrammarParser.ClassNameParentContext,0)


        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLGrammarParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLGrammarParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = YAPLGrammarParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(YAPLGrammarParser.CLASS)
            self.state = 66
            self.className()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 67
                self.match(YAPLGrammarParser.INHERITS)
                self.state = 68
                self.classNameParent()


            self.state = 71
            self.match(YAPLGrammarParser.LBRACE)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 247245856776) != 0):
                self.state = 72
                self.feature()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(YAPLGrammarParser.RBRACE)
            self.state = 79
            self.match(YAPLGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(YAPLGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassName" ):
                return visitor.visitClassName(self)
            else:
                return visitor.visitChildren(self)




    def className(self):

        localctx = YAPLGrammarParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(YAPLGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameParentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(YAPLGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_classNameParent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassNameParent" ):
                listener.enterClassNameParent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassNameParent" ):
                listener.exitClassNameParent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassNameParent" ):
                return visitor.visitClassNameParent(self)
            else:
                return visitor.visitChildren(self)




    def classNameParent(self):

        localctx = YAPLGrammarParser.ClassNameParentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classNameParent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(YAPLGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(YAPLGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_methodName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodName" ):
                listener.enterMethodName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodName" ):
                listener.exitMethodName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodName" ):
                return visitor.visitMethodName(self)
            else:
                return visitor.visitChildren(self)




    def methodName(self):

        localctx = YAPLGrammarParser.MethodNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(YAPLGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(YAPLGrammarParser.INT, 0)

        def STRING(self):
            return self.getToken(YAPLGrammarParser.STRING, 0)

        def className(self):
            return self.getTypedRuleContext(YAPLGrammarParser.ClassNameContext,0)


        def SELF(self):
            return self.getToken(YAPLGrammarParser.SELF, 0)

        def BOOL(self):
            return self.getToken(YAPLGrammarParser.BOOL, 0)

        def OBJECT(self):
            return self.getToken(YAPLGrammarParser.OBJECT, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = YAPLGrammarParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(YAPLGrammarParser.INT)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(YAPLGrammarParser.STRING)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.className()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.match(YAPLGrammarParser.SELF)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.match(YAPLGrammarParser.BOOL)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.match(YAPLGrammarParser.OBJECT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(YAPLGrammarParser.LET, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = YAPLGrammarParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(YAPLGrammarParser.LET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLGrammarParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLGrammarParser.COMMA)
            else:
                return self.getToken(YAPLGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_parameterCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterCall" ):
                listener.enterParameterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterCall" ):
                listener.exitParameterCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterCall" ):
                return visitor.visitParameterCall(self)
            else:
                return visitor.visitChildren(self)




    def parameterCall(self):

        localctx = YAPLGrammarParser.ParameterCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.expression()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 98
                self.match(YAPLGrammarParser.COMMA)
                self.state = 99
                self.expression()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolDeclaration(self):
            return self.getTypedRuleContext(YAPLGrammarParser.BoolDeclarationContext,0)


        def INT_LITERAL(self):
            return self.getToken(YAPLGrammarParser.INT_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(YAPLGrammarParser.STRING_LITERAL, 0)

        def IDENTIFIER(self):
            return self.getToken(YAPLGrammarParser.IDENTIFIER, 0)

        def NEW(self):
            return self.getToken(YAPLGrammarParser.NEW, 0)

        def className(self):
            return self.getTypedRuleContext(YAPLGrammarParser.ClassNameContext,0)


        def methodName(self):
            return self.getTypedRuleContext(YAPLGrammarParser.MethodNameContext,0)


        def LPAREN(self):
            return self.getToken(YAPLGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLGrammarParser.RPAREN, 0)

        def parameterCall(self):
            return self.getTypedRuleContext(YAPLGrammarParser.ParameterCallContext,0)


        def SELF(self):
            return self.getToken(YAPLGrammarParser.SELF, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = YAPLGrammarParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_primaryExpression)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.boolDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(YAPLGrammarParser.INT_LITERAL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.match(YAPLGrammarParser.STRING_LITERAL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(YAPLGrammarParser.IDENTIFIER)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.match(YAPLGrammarParser.NEW)
                self.state = 110
                self.className()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.methodName()
                self.state = 112
                self.match(YAPLGrammarParser.LPAREN)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 246977404928) != 0):
                    self.state = 113
                    self.parameterCall()


                self.state = 116
                self.match(YAPLGrammarParser.RPAREN)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.match(YAPLGrammarParser.SELF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(YAPLGrammarParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLGrammarParser.FALSE, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_boolDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolDeclaration" ):
                listener.enterBoolDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolDeclaration" ):
                listener.exitBoolDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolDeclaration" ):
                return visitor.visitBoolDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def boolDeclaration(self):

        localctx = YAPLGrammarParser.BoolDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not(_la==31 or _la==32):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(YAPLGrammarParser.PrimaryExpressionContext,0)


        def arithmeticExpression(self):
            return self.getTypedRuleContext(YAPLGrammarParser.ArithmeticExpressionContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(YAPLGrammarParser.MethodCallContext,0)


        def uniqueMethod(self):
            return self.getTypedRuleContext(YAPLGrammarParser.UniqueMethodContext,0)


        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = YAPLGrammarParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.arithmeticExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.methodCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.uniqueMethod()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLGrammarParser.PrimaryExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLGrammarParser.PrimaryExpressionContext,i)


        def MINUS(self):
            return self.getToken(YAPLGrammarParser.MINUS, 0)

        def MULT(self):
            return self.getToken(YAPLGrammarParser.MULT, 0)

        def PLUS(self):
            return self.getToken(YAPLGrammarParser.PLUS, 0)

        def DIV(self):
            return self.getToken(YAPLGrammarParser.DIV, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_arithmeticExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpression" ):
                listener.enterArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpression" ):
                listener.exitArithmeticExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpression" ):
                return visitor.visitArithmeticExpression(self)
            else:
                return visitor.visitChildren(self)




    def arithmeticExpression(self):

        localctx = YAPLGrammarParser.ArithmeticExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arithmeticExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.primaryExpression()
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15728640) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 131
            self.primaryExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLGrammarParser.PrimaryExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLGrammarParser.PrimaryExpressionContext,i)


        def EQUALS(self):
            return self.getToken(YAPLGrammarParser.EQUALS, 0)

        def LESS_THAN(self):
            return self.getToken(YAPLGrammarParser.LESS_THAN, 0)

        def GREAT_THAN(self):
            return self.getToken(YAPLGrammarParser.GREAT_THAN, 0)

        def getRuleIndex(self):
            return YAPLGrammarParser.RULE_boolExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpression" ):
                listener.enterBoolExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpression" ):
                listener.exitBoolExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpression" ):
                return visitor.visitBoolExpression(self)
            else:
                return visitor.visitChildren(self)




    def boolExpression(self):
